--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<link href="css/default.css" rel="stylesheet">
 	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-
+	<title>QF - Portfolio</title>
 	<header>
 	  <div class="intro">
 	  	<h1>Quentin FERRE</h1>
@@ -35,7 +35,7 @@
 
 		<section class="work">
 			<div class="image-area right">
-				<img src="img/work/thumbs/image-04.jpg" alt="sdfg" onclick="window.open(this.src)"/>
+				<img src="img/work/thumbs/image-04.jpg" alt="sdfg" onclick="window.open('img/work/full/image-04-full.jpg')"/>
 			</div>
 			<div class="text-box">
 				<div class="text-box-content">
@@ -48,7 +48,7 @@
 
 		<section class="work">
 			<div class="image-area left">
-				<img src="img/work/thumbs/image-05.jpg" alt="sdfg"/>
+				<img src="img/work/thumbs/image-05.jpg" alt="sdfg" onclick="window.open(this.src)"/>
 			</div>
 			<div class="text-box">
 				<div class="text-box-content">
@@ -60,14 +60,14 @@
 
 		<section class="work-center">
 			<div class="center">
-				<img src="img/work/full/image-05-full.jpg" alt="sdfg"/>
+				<img src="img/work/thumbs/image-05-sub.jpg" alt="sdfg" onclick="window.open(this.src)"/>
 			</div>
 		</section>
 
 
 		<section class="work">
 			<div class="image-area right">
-				<img src="img/work/thumbs/image-06.jpg" alt="sdfg"/>
+				<img src="img/work/thumbs/image-06.jpg" alt="sdfg" onclick="window.open('img/work/full/image-06-full.jpg')"/>
 			</div>
 			<div class="text-box">
 				<div class="text-box-content">
@@ -79,7 +79,7 @@
 
 			<section class="work">
 			<div class="image-area left">
-				<img src="img/work/thumbs/image-07.jpg" alt="sdfg"/>
+				<img src="img/work/thumbs/image-07.jpg" alt="sdfg " onclick="window.open(this.src)"/>
 			</div>
 			<div class="text-box">
 				<div class="text-box-content">
@@ -94,7 +94,7 @@
 
 		<section class="work">
 			<div class="image-area right">
-				<img src="img/work/thumbs/image-08.jpg" alt="sdfg"/>
+				<img src="img/work/thumbs/image-08.jpg" alt="sdfg" onclick="window.open(this.src)"/>
 			</div>
 			<div class="text-box">
 				<div class="text-box-content">
@@ -106,14 +106,14 @@
 
 		<section class="work-center">
 			<div class="center">
-				<img src="img/work/full/image-08-full.jpg" alt="sdfg"/>
+				<img src="img/work/thumbs/image-08-sub.jpg" alt="sdfg" onclick="window.open(this.src)"/>
 			</div>
 		</section>
 
 
 		<section class="work">
 			<div class="image-area left">
-				<img src="img/work/thumbs/image-01.jpg" alt="sdfg"/>
+				<img src="img/work/thumbs/image-01.jpg" alt="sdfg" onclick="window.open('img/work/full/image-01-full.jpg')"/>
 			</div>
 			<div class="text-box">
 				<div class="text-box-content">
@@ -125,7 +125,7 @@
 
 		<section class="work">
 			<div class="image-area right">
-				<img src="img/work/thumbs/image-02.jpg" alt="sdfg"/>
+				<img src="img/work/thumbs/image-02.jpg" alt="sdfg" onclick="window.open('img/work/full/image-02-full.jpg')"/>
 			</div>
 			<div class="text-box">
 				<div class="text-box-content">
@@ -137,7 +137,7 @@
 
 		<section class="work">
 			<div class="image-area left">
-				<img src="img/work/thumbs/image-03.jpg" alt="sdfg"/>
+				<img src="img/work/thumbs/image-03.jpg" alt="sdfg" onclick="window.open('img/work/full/image-03-full.jpg')"/>
 			</div>
 			<div class="text-box">
 				<div class="text-box-content">
@@ -147,31 +147,7 @@
 			</div>
 		</section>
 
-		
-
-		<section class="work">
-			<div class="image-area left">
-				<img src="img/work/thumbs/image-09.jpg" alt="sdfg"/>
-			</div>
-			<div class="text-box">
-				<div class="text-box-content">
-				<h3>Projet 1</h3>
-				<h4 class="work-techno">Technologies : C / Open GL </h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-			</div>
-		</section>
-
-		<section class="work">
-			<div class="image-area right">
-				<img src="img/work/thumbs/image-09.jpg" alt="sdfg"/>
-			</div>
-			<div class="text-box">
-				<div class="text-box-content">
-				<h3>Projet 1</h3>
-				<h4 class="work-techno">Technologies : C / Open GL </h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-			</div>
-		</section>
+	
 
 	  </div>
 
