--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<div class="text-box-content">
 				<h3>Ludum Dare #40 - <a href="https://ldjam.com/events/ludum-dare/40/deadly-snowman">Deadly Snowman</a></h3>
 				<h4 class="work-techno">C# / Unity </h4>
-				<p>Game made during a 72 hrs game jam where the theme was : "The more you have, the worse it is". Arcade game where you have to roll, fight and avoid obstacles to get the snowball as big as you can to the finish line.<a href="https://ldjam.com/events/ludum-dare/40/deadly-snowman"> [Entry page]</a></p>
+				<p>Game made during a 72 hrs game jam, the theme was : "The more you have, the worse it is". Arcade game where you have to roll, fight and avoid obstacles to get the snowball as big as you can to the finish line.<a href="https://ldjam.com/events/ludum-dare/40/deadly-snowman"> [Entry page]</a></p>
 			</div>
 		</section>
 
@@ -98,7 +98,7 @@
 				<div class="text-box-content">
 				<h3>Ludum Dare #39 - <a href="https://ldjam.com/events/ludum-dare/39/battery-blaster">BATTERY BLASTER</a></h3>
 				<h4 class="work-techno">C# / Unity </h4>
-				<p>Game made during a 72 hrs game jam where the theme was : "Running out of power". Arcade game where you have to progress in a labyrinth in order to defeat a bad guy. Try to manage your ressources correctly in order to stay alive!<a href="https://ldjam.com/events/ludum-dare/39/battery-blaster"> [Entry page]</a></p>
+				<p>Game made during a 72 hrs game jam, the theme was : "Running out of power". Arcade game where you have to progress in a labyrinth in order to defeat a bad guy. Try to manage your ressources correctly in order to stay alive!<a href="https://ldjam.com/events/ludum-dare/39/battery-blaster"> [Entry page]</a></p>
 			</div>
 		</section>
 
@@ -141,7 +141,7 @@
 			<div class="text-box">
 				<div class="text-box-content">
 				<h3>Oreh</h3>
-				<h4 class="work-techno">Unity</h4>
+				<h4 class="work-techno">C# Unity</h4>
 				<p>Game made during the 'Jam Nuit Blanche' with "empathy" as a theme. The player plays as a warrior watching over a tree. Hords of savages are coming over and over, trying to destroy the tree. Killing them without resting drives the warrior more and more into madness.</p>
 			</div>
 		</section>
