--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 		<section class="work">
 			<div class="image-area right">
-				<img src="img/work/thumbs/image-13.jpg" alt="sdfg" onclick="window.open('img/work/full/image-11.jpg')"/>
+				<img src="img/work/thumbs/image-13.jpg" alt="sdfg" onclick="window.open(this.src)"/>
 			</div>
 			<div class="text-box">
 				<div class="text-box-content">
@@ -56,7 +56,7 @@
 
 		<section class="work">
 			<div class="image-area left">
-				<img src="img/work/thumbs/image-12.jpg" alt="sdfg" onclick="window.open('img/work/full/image-11.jpg')"/>
+				<img src="img/work/thumbs/image-12.jpg" alt="sdfg" onclick="window.open(this.src)"/>
 			</div>
 			<div class="text-box">
 				<div class="text-box-content">
