--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 	<header>
 	  <div class="intro">
 	  	<h1>Quentin FERRE</h1>
-	  	<h2>Game Dev</h2>
+	  	<h2>Game Dev - AI - Machine Learning</h2>
 	  </div>
 	</header>
 	  <div class="wrapper">
 	  	<section class="about">
 		  	<div class="about-content">
 		  		<h3>Hi!</h3>
-		  		<p class="profile-description">My name is Quentin. I love to make and play videogames.   #GameJamEnthusiast. </p>
+		  		<p class="profile-description">I'm a french engineer who loves to make and play videogames.   #GameJamEnthusiast. </p>
 		  		<p> </p>
 		  		<h3>Education</h3>
 
@@ -32,8 +32,8 @@
 			
 			</div>
 			<div class="about-sub-content">
-            <h3>Looking for an internship - Developer </h3>
-                    <p>I'm currently looking for a 5-6 months intership (starting April 2018).</p>
+            <h3>Looking for a Job! </h3>
+                    <p>I just graduated and now looking for a job.</p>
                     <p>Programming skills : C/C++ | Java | C#/Unity | Python </p>
 
 		  	</div>
@@ -50,7 +50,50 @@
 				<div class="text-box-content">
 				<h3>Research project - AI / Animation</h3>
 				<h4 class="work-techno">Python / C++ </h4>
-				<p>[Ongoing]. Work based on the phase functioned neural network for character control system. We are trying to add an injury feature to the system in order to modify the character animation depending on its body status. </p>
+				<p>[Paper accepted at IEEE SMC 2018]. Work based on the phase functioned neural network for character control system. We added an injury feature to the system in order to modify the character animation depending on its body status. </p>
+			</div>
+		</section>
+
+		<section class="work">
+			<div class="image-area left">
+				<img src="img/work/thumbs/image-18.jpg" alt="sdfg" onclick="window.open(this.src)"/>
+			</div>
+			<div class="image-area right">
+				<img src="img/work/thumbs/pfnn1.gif" alt="sdfg" onclick="window.open(this.src)" />
+				<img src="img/work/thumbs/pfnn2.gif" alt="sdfg" onclick="window.open(this.src)"/>
+			</div>
+		</section>
+
+		<section class="work">
+			<div class="image-area left">
+				<img src="img/work/thumbs/image-17.jpg" alt="sdfg" onclick="window.open(this.src)"/>
+			</div>
+			<div class="text-box">
+				<div class="text-box-content">
+				<h3>R&D - Voice Style Transfer - NPC AI system</h3>
+				<h4 class="work-techno">Python / C++ </h4>
+				<p>Internship at Luminous Productions (Square Enix Group). Investigation on the different Voice Style Transfer techniques and design/code of a micro-NPC AI system. </p>
+			</div>
+		</section>
+
+		<section class="work">
+			<div class="image-area right">
+				<img src="img/work/thumbs/image-16.jpg" alt="sdfg" onclick="window.open(this.src)"/>
+			</div>
+			<div class="text-box">
+				<div class="text-box-content">
+				<h3>Brainio Bros - BR41n.io Hackathon</h3>
+				<h4 class="work-techno">C# Unity - Brain Computer Interface</h4>
+				<p>[IEEE BRAIN WINNER] [1st PLACE WINNER]. Game made in 24hrs. Cooperative plateformer where one player uses a classic controller and another uses a P300 headset in order to change the level design by focusing on a specific color.  </p>
+			</div>
+		</section>
+
+		<section class="work">
+			<div class="image-area right">
+				<img src="img/work/thumbs/image-15.jpg" alt="sdfg" onclick="window.open(this.src)"/>
+			</div>
+			<div class="image-area left">
+				<img src="img/work/thumbs/image-14.jpg" alt="sdfg" onclick="window.open(this.src)"/>
 			</div>
 		</section>
 
