--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 			</div>
 			<div class="about-sub-content">
             <h3>Looking for a Job! </h3>
-                    <p>I just graduated and now looking for a job.</p>
+                    <p>Just graduated as a computer sciences engineer!</p>
+                    <p> Ready to work anywhere in the world!</p>
                     <p>Programming skills : C/C++ | Java | C#/Unity | Python </p>
 
 		  	</div>
@@ -59,8 +60,10 @@
 				<img src="img/work/thumbs/image-18.jpg" alt="sdfg" onclick="window.open(this.src)"/>
 			</div>
 			<div class="image-area right">
-				<img src="img/work/thumbs/pfnn1.gif" alt="sdfg" onclick="window.open(this.src)" />
-				<img src="img/work/thumbs/pfnn2.gif" alt="sdfg" onclick="window.open(this.src)"/>
+				<div>
+					<img src="img/work/thumbs/pfnn1.gif" alt="sdfg" onclick="window.open(this.src)" />
+					<img src="img/work/thumbs/pfnn2.gif" alt="sdfg" onclick="window.open(this.src)"/>
+				</div>
 			</div>
 		</section>
 
