--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 			<div class="image-area left">
 				<img src="img/work/thumbs/image-18.jpg" alt="sdfg" onclick="window.open(this.src)"/>
 			</div>
-			<div class="image-area right">
-				<div>
-					<img src="img/work/thumbs/pfnn1.gif" alt="sdfg" onclick="window.open(this.src)" />
-					<img src="img/work/thumbs/pfnn2.gif" alt="sdfg" onclick="window.open(this.src)"/>
-				</div>
+			<div class="image-area right ">
+				
+					<img class="gif" src="img/work/thumbs/pfnn1.gif" alt="sdfg" onclick="window.open(this.src)" />
+					<img class="gif" src="img/work/thumbs/pfnn2.gif" alt="sdfg" onclick="window.open(this.src)"/>
+	
 			</div>
 		</section>
 
