--- a/index.html
+++ b/index.html
@@ -124,8 +124,22 @@
 			</div>
 		</section>
 
+
 		<section class="work">
 			<div class="image-area right">
+				<img src="img/work/thumbs/image-19.jpg" alt="sdfg" onclick="window.open(this.src)"/>
+			</div>
+			<div class="text-box">
+				<div class="text-box-content">
+				<h3>Ludum Dare #41 - <a href="https://ldjam.com/events/ludum-dare/41/call-of-bob-ross">Call of Bob Ross</a></h3>
+				<h4 class="work-techno">C# / Unity </h4>
+				<p>Game made during a 72 hrs game jam, the theme was : "Combine 2 Incompatible Genres". Arcade game where you have to shoot colorful insects on a canvas to paint a masterpiece.<a href="https://ldjam.com/events/ludum-dare/41/call-of-bob-ross"> [Entry page]</a></p>
+			</div>
+		</section>
+
+
+		<section class="work">
+			<div class="image-area left">
 				<img src="img/work/thumbs/image-10.jpg" alt="sdfg" onclick="window.open('img/work/full/image-10-full.jpg')"/>
 			</div>
 			<div class="text-box">
@@ -137,7 +151,7 @@
 		</section>
 
 		<section class="work">
-			<div class="image-area left">
+			<div class="image-area right">
 				<img src="img/work/thumbs/image-11.jpg" alt="sdfg" onclick="window.open('img/work/full/image-11.jpg')"/>
 			</div>
 			<div class="text-box">
@@ -149,7 +163,7 @@
 		</section>
 
 		<section class="work">
-			<div class="image-area right">
+			<div class="image-area left">
 				<img src="img/work/thumbs/image-04.jpg" alt="sdfg" onclick="window.open('img/work/full/image-04-full.jpg')"/>
 			</div>
 			<div class="text-box">
@@ -162,7 +176,7 @@
 		</section>
 
 		<section class="work">
-			<div class="image-area left">
+			<div class="image-area right">
 				<img src="img/work/thumbs/image-05.jpg" alt="sdfg" onclick="window.open(this.src)"/>
 			</div>
 			<div class="text-box">
@@ -181,7 +195,7 @@
 
 
 		<section class="work">
-			<div class="image-area right">
+			<div class="image-area left">
 				<img src="img/work/thumbs/image-06.jpg" alt="sdfg" onclick="window.open('img/work/full/image-06-full.jpg')"/>
 			</div>
 			<div class="text-box">
@@ -193,7 +207,7 @@
 		</section>
 
 			<section class="work">
-			<div class="image-area left">
+			<div class="image-area right">
 				<img src="img/work/thumbs/image-07.jpg" alt="sdfg " onclick="window.open(this.src)"/>
 			</div>
 			<div class="text-box">
@@ -208,7 +222,7 @@
 
 
 		<section class="work">
-			<div class="image-area right">
+			<div class="image-area left">
 				<img src="img/work/thumbs/image-08.jpg" alt="sdfg" onclick="window.open(this.src)"/>
 			</div>
 			<div class="text-box">
